--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 @import url("zeros.css");
+body {
+  background-color: #00002b;
+}
+
 .wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8,6 +15,12 @@
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100%;
+  min-width: 100%;
+}
+
+.game-app {
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .page {
@@ -35,13 +48,20 @@
 }
 
 .game {
-  min-width: 70%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   border: 0.5px black solid;
+  -webkit-perspective: 5000px;
+          perspective: 5000px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  margin-bottom: 20px;
 }
 .game__column {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  max-height: 100%;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
@@ -201,16 +221,25 @@
   color: black;
 }
 
+.game-out {
+  padding: 20px;
+  background-color: #00008f;
+  border-radius: 20px;
+}
+
 #restart {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  font-size: 20px;
-  padding: 5px;
+  font-size: 25px;
+  padding: 12px;
+  background-color: aquamarine;
+  border-radius: 20px;
 }
 
 #loseText, #winText {
+  z-index: 3;
   font-size: 70px;
   position: absolute;
   left: 50%;
@@ -219,6 +248,319 @@
           transform: translateX(-50%) translateY(-50%);
 }
 
-.mines-counter {
+.mines-counter, .time-counter {
+  float: right;
+  font-size: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 10px;
+  background-color: white;
+  border-radius: 7px;
+}
+.mines-counter__left, .time-counter__left {
+  height: 2em;
+}
+.mines-counter__counter, .time-counter__counter {
+  padding: 7px 15px;
+  background-color: darkblue;
+  color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.time-counter {
+  float: left;
+}
+
+.mode-app {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #00007c;
+}
+
+.mode {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 30px;
+  background-color: white;
+  border-radius: 20px;
+}
+.mode__header {
+  margin-bottom: 35px;
+  text-align: center;
+  font-size: 20px;
+}
+.mode__body {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  gap: 20px;
+}
+.mode-item {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: #d6d6d6;
+  padding: 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border: 3px #d6d6d6 solid;
+}
+.mode-item:hover {
+  border: 3px black solid;
+  -webkit-transform: scale(135%, 135%);
+          transform: scale(135%, 135%);
+  z-index: 2;
+}
+.mode-item__body {
+  pointer-events: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+.mode-item__body > * {
+  text-align: center;
+  font-size: 18px;
+}
+.mode-item__name {
   font-size: 25px;
+}
+.create {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.create * {
+  font-size: 20px;
+  text-align: center;
+}
+.create label {
+  margin-bottom: 3px;
+}
+.create input {
+  border: 2px black dashed;
+  margin-bottom: 2px;
+}
+.create button {
+  padding: 10px;
+}
+
+.endModule {
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.95);
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(-100%, -50%);
+          transform: translate(-100%, -50%);
+  width: 100%;
+  padding: 100px;
+  -webkit-transition: 1s;
+  transition: 1s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.endModule__text {
+  font-size: 100px;
+  text-align: center;
+  margin-bottom: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.endModule__newGame {
+  font-size: 30px;
+  padding: 10px 20px;
+  border-radius: 20%/50%;
+  background-color: darkblue;
+  color: white;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.endModule__newGame:hover {
+  background-color: blue;
+}
+.endModule__close {
+  width: 50px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  cursor: pointer;
+}
+
+.menu {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  left: 100%;
+  top: 20px;
+  -webkit-transform: translateX(-100%) translateX(-20px);
+          transform: translateX(-100%) translateX(-20px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.menu__open .menu__burger-line:nth-child(1) {
+  -webkit-transform: translateY(9px) rotateZ(-45deg);
+          transform: translateY(9px) rotateZ(-45deg);
+}
+.menu__open .menu__burger-line:nth-child(2) {
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+}
+.menu__open .menu__burger-line:nth-child(3) {
+  -webkit-transform: translateY(-9px) rotateZ(45deg);
+          transform: translateY(-9px) rotateZ(45deg);
+}
+.menu__burger {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 7px;
+  margin-bottom: 20px;
+}
+.menu__burger-line {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  pointer-events: none;
+  height: 2px;
+  width: 30px;
+  background-color: white;
+}
+.menu__body {
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+.menu__body-item {
+  -webkit-transform: translateX(150%);
+          transform: translateX(150%);
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-size: 20px;
+  color: white;
+  transition: 0.5s;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+  text-align: right;
+  white-space: nowrap;
+}
+.menu__body-item:hover {
+  color: lightblue;
+}
+.menu__open .menu__body-item {
+  -webkit-transform: none;
+          transform: none;
+  opacity: 1;
+}
+
+.menu__body-item:nth-child(1) {
+  -webkit-transition-delay: calc(1s / 10);
+          transition-delay: calc(1s / 10);
+}
+
+.menu__body-item:nth-child(2) {
+  -webkit-transition-delay: calc(2s / 10);
+          transition-delay: calc(2s / 10);
+}
+
+.menu__body-item:nth-child(3) {
+  -webkit-transition-delay: calc(3s / 10);
+          transition-delay: calc(3s / 10);
+}
+
+.menu__body-item:nth-child(4) {
+  -webkit-transition-delay: calc(4s / 10);
+          transition-delay: calc(4s / 10);
+}
+
+.menu__body-item:nth-child(5) {
+  -webkit-transition-delay: calc(5s / 10);
+          transition-delay: calc(5s / 10);
+}
+
+.menu__body-item:nth-child(6) {
+  -webkit-transition-delay: calc(6s / 10);
+          transition-delay: calc(6s / 10);
+}
+
+.menu__body-item:nth-child(7) {
+  -webkit-transition-delay: calc(7s / 10);
+          transition-delay: calc(7s / 10);
+}
+
+.menu__body-item:nth-child(8) {
+  -webkit-transition-delay: calc(8s / 10);
+          transition-delay: calc(8s / 10);
+}
+
+.menu__body-item:nth-child(9) {
+  -webkit-transition-delay: calc(9s / 10);
+          transition-delay: calc(9s / 10);
 }
