--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,7 @@
 @import url('zeros.css');
 
 body {
-    background-color: rgb(0, 0, 43);
+    background-color: rgb(195, 220, 228);
 }
 
 .wrapper {
@@ -22,7 +22,7 @@ body {
 }
 .page {
     flex: 1 1 auto;
-    height: 0px;
+    height: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,15 +47,16 @@ body {
     }
     &__item {
         transition: 0.4s;
-        background-color: rgba(13, 0, 255, 0.7);
+        background-color: #001eff;
         border: 0.5px black solid;
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 2px;
         box-shadow: 0 0 7px 2px rgba(0, 0, 0, 0.508) inset;
+        cursor: pointer;
         &:hover {
-            background-color: rgba(13, 0, 255, 0.5);
+            background-color: #364dff;
         }
         * {
             user-select: none;
@@ -178,6 +179,13 @@ body {
     background-color: rgb(0, 0, 143);
     border-radius: 20px;
 }
+.game-botton {
+    display: flex;
+    justify-content: space-between;
+}
+.inputer {
+    font-size: 20px;
+}
 #restart {
     user-select: none;
     font-size: 25px;
@@ -228,7 +236,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgb(0, 0, 124);
+    background: rgb(195, 220, 228);
 }
 .mode {
     position: absolute;
@@ -392,7 +400,7 @@ body {
             pointer-events: none;
             height: 2px;
             width: 30px;
-            background-color: white;
+            background-color: blue;
         }
     }
     &__body {
@@ -405,14 +413,14 @@ body {
             opacity: 0;
             transition: 0.5s;
             font-size: 20px;
-            color: white;
+            color: blue;
             transition: 0.5s;
             user-select: none;
             cursor: pointer;
             text-align: right;
             white-space: nowrap;
             &:hover {
-                color: lightblue;
+                color: darkblue;
             }
         }
     }
